# rs-inflector

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: inflector.rs  lib.rs  rule.rs
src/inflector/: inflector.rs  mod.rs  rule.rs
tests/: lib.rs  test.rs
